linter の警告を一部修正した